# Screeny

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/screeny-core/: Cargo.toml
crates/screeny-core/src/: capture.rs  config.rs  error.rs  lib.rs  maintenance.rs  pipeline.rs  secrets.rs
crates/screeny-core/src/llm/: detect.rs  mod.rs  ollama.rs  openai_compat.rs  prompts.rs
crates/screeny-core/src/sinks/: email.rs  mod.rs  telegram.rs
crates/screeny-core/src/store/: db.rs  images.rs  migrations.rs  mod.rs
legacy/: .env.example  com.screeny.archiver.plist  session_archiver.py  start_service.command  stop_service.command  upwork.command
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  lib.rs  tray.rs
src/lib/: api.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/settings/: +page.svelte
