[package]
name = "screeny"
version = "0.1.0"
description = "Privacy-first automatic screen archiver with local AI analysis"
authors = ["Saad"]
edition = "2021"

[lib]
name = "screeny_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
screeny-core = { path = "../crates/screeny-core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
