[package]
name = "screeny-core"
version = "0.1.0"
edition = "2021"
description = "Screeny core: capture scheduler, storage, and delivery pipeline (no Tauri dependencies)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
xcap = "0.8"

[dev-dependencies]
tempfile = "3"
