[package]
name = "screeny-core"
version = "0.1.0"
edition = "2021"
description = "Screeny core: capture scheduler, storage, and delivery pipeline (no Tauri dependencies)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
xcap = "0.8"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
futures-util = "0.3"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
] }
keyring = { version = "3", features = [
    "windows-native",
    "apple-native",
    "sync-secret-service",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
